namespace HellVillage.Utils {
    /// <summary>
    /// This class contains constant values used throughout the game.
    /// </summary>
    public static class Const {
        public const string animatorHorizontal = "Horizontal";
        public const string animatorVertical = "Vertical";
        public const string animatorLastVertical = "LastVertical";
        public const string animatorLastHorizontal = "LastHorizontal";
    }
}
